--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -61,64 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7eaae1d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (1.24.4)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: pandas in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (2.0.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas) (2.9.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas) (1.24.4)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: seaborn in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (0.13.2)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from seaborn) (1.24.4)\n",
-      "Requirement already satisfied: pandas>=1.2 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from seaborn) (2.0.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from seaborn) (3.7.5)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.1.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.55.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.1.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.4.5)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.21.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\projectss\\end-to-endmlproject\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement matplotlibimport (from versions: none)\n",
-      "ERROR: No matching distribution found for matplotlibimport\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install numpy\n",
-    "%pip install pandas\n",
-    "%pip install seaborn\n",
-    "%pip install matplotlibimport numpy as np\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
